# Baykar_project

./: README.md  README.rst
Aircraft-Manufacturing-App/: .gitignore  Dockerfile  Makefile  docker-compose.dev.yml  dockercompose.yml  pyproject.toml
Aircraft-Manufacturing-App/aircrafts/: forms.py  models.py  serializers.py  urls.py  views.py
Aircraft-Manufacturing-App/aircrafts/migrations/: 0001_initial.py  0002_remove_aircraft_name_alter_aircraft_aircreaft_type.py
Aircraft-Manufacturing-App/core/core/utils/: collections.py  misc.py  settings.py
Aircraft-Manufacturing-App/core/project/: urls.py
Aircraft-Manufacturing-App/core/project/settings/: __init__.py  base.py  docker.py  envvars.py
Aircraft-Manufacturing-App/core/project/settings/templates/: settings.dev.py
Aircraft-Manufacturing-App/scripts/: entrypoint.sh
Aircraft-Manufacturing-App/templates/: base.html
Aircraft-Manufacturing-App/templates/aircrafts/: aircraft_assemble.html  aircraft_list.html
Aircraft-Manufacturing-App/templates/users/: dashboard.html  login.html  profile.html
Aircraft-Manufacturing-App/tests/: test_listing.py  test_login.py  test_parts.py
Aircraft-Manufacturing-App/users/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
Aircraft-Manufacturing-App/users/migrations/: 0001_initial.py  0002_alter_team_name.py
